crates/es-fluent-derive/tests/ui/bad_value_transform_signature.stderr
error[E0308]: mismatched types
 --> tests/ui/bad_value_transform_signature.rs:5:10
  |
5 | #[derive(EsFluent)]
  |          ^^^^^^^^ expected `u32`, found `&String`
6 | pub struct BadValueTransform {
7 |     #[fluent(value = |value: u32| value)]
  |                      ------------------ arguments to this function are incorrect
  |
note: closure parameter defined here
 --> tests/ui/bad_value_transform_signature.rs:7:23
  |
7 |     #[fluent(value = |value: u32| value)]
  |                       ^^^^^^^^^^
  = note: this error originates in the derive macro `EsFluent` (in Nightly builds, run with -Z macro-backtrace for more info)
