crates/es-fluent-derive/tests/ui/bad_value_transform_signature.rs
extern crate es_fluent;

use es_fluent_derive::EsFluent;

#[derive(EsFluent)]
pub struct BadValueTransform {
    #[fluent(value = |value: u32| value)]
    value: String,
}

fn main() {}
